@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.27
+    - more correct calculator implementation
 
 0.26
     - added calculator
